<resources>
  <string name="app_name">CNMC</string>
  <string name="welcome_text">Welcome To CNMC</string>
  <string name="current_availability">At a Glance</string>
  <string name="categorywise_down">Category Wise</string>
  <string name="durationwise_down">Duration Wise</string>
  <string name="sitetypewise_down">Site-Type Wise</string>
  <string name="partial_down">Partial Down</string>
  <string name="leased_out">Leased -Out</string>
  <string name="signal_strength">Signal Details</string>
  <string name="user_details">User Details</string>
  <string name="new_user_request">New User Request</string>
  <string name="commercial_locked">Commercially-Locked</string>
  <string name="app_link"><a href="https://61.0.234.2/downloads/CNMC.apk">Download</a></string>
  <string name="circle">Select Circle</string>
  <string name="underconstruction">underconstruction</string>
  <string name="update_profile">Update Profile</string>
  <string name="forgetpassword">Forgot Password</string>
  <string name="resetpassword">Reset Password</string>
  <string name="duration_availability">Availability - Monthly(Cumm)</string>
  <string name="mttr">MTTR</string>
  <string name="Traffic">All Circles Traffic</string>
  <string name="add_bts">ADD BTS</string>
  <string name="deletebts">Delete-BTS</string>
  <string name="viewbts">View BTS</string>
  <string name="bts_faults">BTS - FAULTS</string>
  <string name="availability">AVAILABILTY</string>
  <string name="menu_traffic">TRAFFIC</string>
  <string name="my_bts">My Bts</string>
  <string name="admin_users">ADMIN</string>
  <string name="my_bts_users">MY BTS USERS</string>
  <string name="mybts_down">MYBTS - DOWN</string>
  <string name="skip">SKIP</string>
  <string name="leftoutbts">MyBts-leftout</string>
  <string name="search">search</string>
  <string name="deactivate_user">Deactivate/Activate User</string>
  <string name="deactive">Deactivate</string>
  <string name="activate">Activate</string>
  <string name="reset">reset</string>
  <string name="mybts_leftout">Mybts-Leftout</string>
  <string name="add_bts_admin">Add - MyBts</string>
  <string name="mybts_unlink">MyBts - Unlink</string>
  <string name="techwise">TECH WISE</string>
  <string name="circle_administrator">Circle Administrators</string>
  <string name="delete_user">Delete User</string>
  <string name="update_user_level">User Level Updataion</string>
  <string name="outsource_faults">BTS FAULTS</string>
  <string name="outsource_siteslist">SITES LIST</string>
  <string name="outsourced">OUTSOURCED</string>
  <string name="omcr_process">OMCR-PROCESS</string>
  <string name="update_user_type">UPDATE USER TYPE</string>
  <string name="user_type_update">User Type Updation</string>
  <string name="chg_user_type">CHANGE USER TYPE</string>
  <string name="header_circle">Circle</string>
  <string name="header_down">Down</string>
  <string name="header_partial">Partial</string>
  <string name="header_count">Count</string>
  <string name="header_perc">Perc</string>
  <string name="header_rank">Rank</string>
  <string name="header_ssa">SSA</string>
  <string name="header_total">Total</string>
  <string name="header_ssaavailability">SSA Availability - %1$s </string>
  <string name="header_supercritical">SC</string>
  <string name="header_critical">Cri</string>
  <string name="header_important">Imp</string>
  <string name="header_normal">Nor</string>
  <string name="header_total_short">Tot</string>
  <string name="header_2g">2G</string>
  <string name="header_3g">3G</string>
  <string name="header_4g">4G</string>
  <string name="header_categorywise">CategoryWise-%1$s</string>
  <string name="down_wrt_total">%1$s/%2$s</string>
  <string name="header_downdetails">BtsDown-%1$s\n%2$s</string>
  <string name="app_version">Ver.%1$s</string>
  <string name="header_mybts_add_site_details">MyBts Add - Site Details</string>
  <string name="circle_ssaname">%1$s / %2$s</string>
  <string name="bts_site_verndor_cat">%1$s / %2$s / %3$s / %4$s</string>
  <string name="header_tech">TechWise\n%1$s</string>
  <string name="header_tech_circle_ssa">TechWise-%1$s\n%2$s</string>
  <string name="header_lt_1day">&#60;1D</string>
  <string name="header_1_2_day">1&#8211;2D</string>
  <string name="header_2_3_day">2&#8211;3D</string>
  <string name="header_3_7_day">3&#8211;7D</string>
  <string name="header_gt_7_day">&#62;7D</string>
  <string name="header_durationwise">DurationWise&#8211;%1$s</string>
  <string name="header_durationwise_ssa">DurationWise&#8211;%1$s\n%2$s</string>
  <string name="header_sitetypewise">SiteTypeWise-%1$s</string>
  <string name="header_bsnl">BS</string>
  <string name="header_nonbsnl">NB</string>
  <string name="header_ip">IP</string>
  <string name="header_uso">US</string>
  <string name="header_unidentified">UI</string>
  <string name="header_outsourced">OutSourced</string>
  <string name="header_bsnl_nonip">Bsnl [Non-IP]</string>
  <string name="header_circle_outsourced">%1$s&#8211;Outsourced\nAvailability</string>
  <string name="header_locked_details">LockedSites - %1$s\n%2$s</string>
  <string name="outsource_details">"OutSourced - %1$s\n%2$s"</string>
  <string name="down_wrt_total_for_total">%1$s\n%2$s</string>
  <string name="header_gsm">GSM</string>
  <string name="header_umts">UMTS</string>
  <string name="header_lte">LTE</string>
  <string name="header_partialdown">"Partialdown"</string>
  <string name="header_partialdown_circle">Partialdown - %1$s</string>
  <string name="header_partialdown_details">Partialdown - %1$s\n%2$s</string>
  <string name="header_leasedout">LeasedOut-%1$s</string>
  <string name="header_leasedout_details">LeasedOut-%1$s\n%2$s</string>
  <string name="header_instances">Inst</string>
  <string name="header_duration_hrs">Dur-Hrs</string>
  <string name="header_unique_bts">U-Bts</string>
  <string name="header_mttr">MTTR</string>
  <string name="header_mttr_ssa_circle">MTTR - %1$s</string>
  <string name="header_ssa_mttr">SSA Wise MTTR - %1$s</string>
  <string name="header_circlewise_traffic">Circle Wise Traffic - %1$s</string>
  <string name="url_circlwise_traffic">CircleTraffic</string>
  <string name="header_name_value">%1$s - %2$s</string>
  <string name="header_traffic_erlang">Erl-(1000)</string>
  <string name="header_traffic_datavol">DataVol(TB)</string>
  <string name="header_traffic_cnt">Traffic Cnt</string>
  <string name="header_master_cnt">Master Cnt</string>
  <string name="header_name_text_value">%1$s %2$s - %3$s</string>
  <string name="header_ericsson">Eric</string>
  <string name="header_alcatel">Alca</string>
  <string name="header_motorola">Moto</string>
  <string name="header_huawei">Huaw</string>
  <string name="header_nortel">Nor</string>
  <string name="header_nokia">Nok</string>
  <string name="header_zte">Zte</string>
  <string name="header_name_break_value">%1$s\n%2$s</string>
  <string name="header_username">Name</string>
  <string name="header_msisdn">Msisdn</string>
  <string name="header_userdesg">Desg</string>
  <string name="name_value_hypen">%1$s - %2$s</string>
  <string name="name_value_colon">%1$s : %2$s</string>
  <string name="app_categorywise">CategoryWise-AllCircles</string>
  <string name="descritption_home">Home</string>
  <string name="description_xlsx">Xlsx</string>
  <string name="descritption_shareBy">ShareBy</string>
  <string name="notification">%1$s</string>
  <string name="header_omcr">OMCR-Name</string>
  <string name="header_startdate">StartDate</string>
  <string name="header_enddate">EndDate</string>
  <string name="app_ssawise_availability">SSAWise-Avail</string>
  <string name="header_users">Users</string>
  <string name="header_mybts">MyBts</string>
  <string name="header_todaylogin">Today-Login</string>
  <string name="header_reason_update">Reason Update - Site Details</string>
  <string name="google_map_text">Click here for Bts over Google Map</string>
  <string name="header_sdcaavailability">SDCA Wise Avail-%1$s</string>

  <string-array name="working">
    <item>Select</item>
    <item>Working</item>
    <item>Not-Working</item>
  </string-array>
  <string name="title_activity_today_logins">TodayLogins</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="ipsite_admin">IP-Sites Administration</string>
  <string name="change_mybts_msisdn">Change MyBTS Msisdn</string>
  <string name="administration">Administration</string>
  <string name="change_msisdn">replace msisdn</string>
  <string name="search_bts">Search BTS</string>
  <string name="sync_bts_master">Sync BTS Master</string>
  <string name="search_bts_name">Search BTS Name</string>
  <string name="bts_info">BTS Info</string>
  <string name="ip_add_users">IP-Sites Add Users</string>
  <string name="ip_add_sites">IP-Sites Add Sites</string>
  <string name="ip_unlink_sites">IP-Sites Unlink BTS</string>
  <string name="ip_change_msisdn">IP-Sites Change Msisdn</string>
  <string name="ip_view_sites">IP-Site View/Unlink Sites</string>
  <string name="get_bts_list">Get BTS List</string>
  <string name="view_ip_assigned">View IP Assigned Sites</string>
  <string name="get_ip_assigned_sites">Get IP Assigned Sites</string>
  <string name="add_ip_user">Add IP User</string>
  <string name="title_activity_sdca_wise_faults">SdcaWiseFaults</string>
  <string name="header_tcs4g">TCS-4G-%1$S</string>
  <string name="header_tcs4g_sa">TCS-4G-SA-%1$S</string>
  <string name="header_band_01">B-01</string>
  <string name="header_band_28">B-28</string>
  <string name="header_band_41">B-41</string>
  <string name="header_tcs">Tcs</string>
  <string name="header_legacy">Legacy N/W \n %1$s</string>

  <!--  Options for Drop Down of details-->
  <string-array name="spinner_fault_details">
    <item>Select Filter Item</item>
    <item>Tejas-Band-01</item>
    <item>Tejas-Band-28</item>
    <item>Tejas-Band-41</item>
    <item>Saturation-Band-01</item>
    <item>Saturation-Band-28</item>
    <item>Saturation-Band-41</item>
    <item>LTE-Legacy N/W</item>
    <item>Legacy N/W 2G/3G</item>
    <item>Reason-NotUpdated</item>
    <item>All</item>

  </string-array>
</resources>
