<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".TodayLogins">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimary"
    android:theme="@style/AppBarOverlay"
    app:navigationIcon="?attr/homeAsUpIndicator"
    tools:ignore="MissingConstraints" >

    <ImageButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:id="@+id/home"
      android:textSize="12sp"
      android:background="@null"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:src="@mipmap/home" />
  </androidx.appcompat.widget.Toolbar>

  <TextView
    android:id="@+id/textView1"
    android:layout_width="0dp"
    android:layout_height="24dp"
    android:layout_marginTop="20dp"
    android:text="IP-SITES Administration"
    android:textAlignment="gravity"
    android:gravity="center|center_vertical"
    android:textSize="20sp"
    android:textColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/btn_ip_add_user"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="24dp"
    android:textColor="@color/white"
    android:text="@string/ip_add_users"
    android:backgroundTint="@color/blue"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView1" />

  <Button
    android:id="@+id/btn_ip_add_sites"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="24dp"
    android:textColor="@color/white"
    android:backgroundTint="@color/blue"
    android:text="@string/ip_add_sites"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_ip_add_user" />

  <Button
    android:id="@+id/btn_ip_view_sites"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="24dp"
    android:textColor="@color/white"
    android:backgroundTint="@color/blue"
    android:text="@string/ip_view_sites"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_ip_add_sites" />

  <Button
      android:id="@+id/btn_ip_change_msisdn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="24dp"
      android:textColor="@color/white"
      android:backgroundTint="@color/blue"
      android:text="@string/ip_change_msisdn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_ip_view_sites" />

</androidx.constraintlayout.widget.ConstraintLayout>